# substrate-test-task

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/erc20/: Cargo.toml
pallets/erc20/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
